src/test/ui/export-import.stderr
error[E0603]: function `unexported` is private
  --> $DIR/export-import.rs:1:8
   |
LL | use m::unexported;
   |        ^^^^^^^^^^ private function
   |
note: the function `unexported` is defined here
  --> $DIR/export-import.rs:7:5
   |
LL |     fn unexported() { }
   |     ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
